test_suite5/ALAN/test_suite/alan-2022-examples/failing/006930_mutation.alan
source e5 begin put < end
